standardize ooba logit bias HTML nest

--- a/public/index.html
+++ b/public/index.html
@@ -1646,9 +1646,11 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="range-block wide100p">
+                                    <div class="range-block wide100p" id="logit_bias_block_ooba">
                                         <div id="logit_bias_textgenerationwebui" class="range-block-title title_restorable">
-                                            <strong data-i18n="Logit Bias">Logit Bias</strong>
+                                            <h4>
+                                                <span data-i18n="Logit Bias">Logit Bias</span>
+                                            </h4>
                                             <div id="textgen_logit_bias_new_entry" class="menu_button menu_button_icon">
                                                 <i class="fa-xs fa-solid fa-plus"></i>
                                                 <small data-i18n="Add">Add</small>
