--- a/public/scripts/extensions/regex/debugger.html
+++ b/public/scripts/extensions/regex/debugger.html
@@ -11,6 +11,7 @@
             <button
                 id="regex_debugger_save_order"
                 class="menu_button menu_button_icon interactable"
+                data-i18n="[title]ext_regex_debugger_save_order_help"
                 title="Save current rule order"
                 tabindex="0"
             >
@@ -53,6 +54,7 @@
                 <button
                     id="regex_debugger_run_test"
                     class="menu_button menu_button_icon interactable"
+                    data-i18n="[title]ext_regex_debugger_run_test_help"
                     title="Run the test pipeline"
                     tabindex="0"
                 >
@@ -115,6 +117,7 @@
                     <div
                         id="regex_debugger_expand_steps"
                         class="menu_button menu_button_icon"
+                        data-i18n="[title]Expand view"
                         title="Expand view"
                     >
                         <i class="fa-solid fa-expand"></i>
@@ -132,6 +135,7 @@
                     <div
                         id="regex_debugger_expand_final"
                         class="menu_button menu_button_icon"
+                        data-i18n="[title]Expand view"
                         title="Expand view"
                     >
                         <i class="fa-solid fa-expand"></i>
@@ -158,7 +162,7 @@
             <code class="rule-regex"></code>
             <small class="rule-scope"></small>
         </div>
-        <div class="menu_button menu_button_icon edit_rule" title="Edit Rule">
+        <div class="menu_button menu_button_icon edit_rule" data-i18n="[title]Edit Rule" title="Edit Rule">
             <i class="fa-solid fa-pencil"></i>
         </div>
     </li>
