--- a/public/scripts/extensions/stable-diffusion/dropdown.html
+++ b/public/scripts/extensions/stable-diffusion/dropdown.html
@@ -1,6 +1,6 @@
 <div id="sd_dropdown">
     <ul class="list-group">
-    <span>Send me a picture of:</span>
+    <span data-i18n="Send me a picture of:">Send me a picture of:</span>
         <li class="list-group-item" id="sd_you" data-value="you" data-i18n="sd_Yourself">Yourself</li>
         <li class="list-group-item" id="sd_face" data-value="face" data-i18n="sd_Your_Face">Your Face</li>
         <li class="list-group-item" id="sd_me" data-value="me" data-i18n="sd_Me">Me</li>
