--- a/public/scripts/extensions/tts/settings.html
+++ b/public/scripts/extensions/tts/settings.html
@@ -12,7 +12,7 @@
             <div class="tts_block">
                 <select id="tts_provider" class="flex1">
                 </select>
-                <input id="tts_refresh" class="menu_button" type="submit" value="Reload" />
+                <input id="tts_refresh" data-i18n="[value]tts_refresh" class="menu_button" type="submit" value="Reload" />
             </div>
             <div>
                 <label class="checkbox_label" for="tts_enabled">
@@ -88,7 +88,7 @@
             <form id="tts_provider_settings">
             </form>
             <div class="tts_buttons">
-                <input id="tts_voices" class="menu_button" type="submit" value="Available voices" />
+                <input id="tts_voices" class="menu_button" data-i18n="[value]Available voices" type="submit" value="Available voices" />
             </div>
         </div>
     </div>
