show grammar string input in tabby API samplers list

--- a/public/index.html
+++ b/public/index.html
@@ -1682,7 +1682,7 @@
                                             <textarea id="negative_prompt_textgenerationwebui" class="wide100p text_pole textarea_compact" name="negative_prompt" rows="3" data-i18n="[placeholder]Add text here that would make the AI generate things you don't want in your outputs." placeholder="Add text here that would make the AI generate things you don't want in your outputs."></textarea>
                                         </div>
                                     </div>
-                                    <div id="grammar_block_ooba" data-tg-type="ooba,aphrodite" class="wide100p">
+                                    <div id="grammar_block_ooba" data-tg-type="ooba,aphrodite,tabby" class="wide100p">
                                         <hr class="wide100p">
                                         <h4 class="wide100p textAlignCenter">
                                             <label>
