--- a/public/index.html
+++ b/public/index.html
@@ -1685,15 +1685,13 @@
                                     <div id="grammar_block_ooba" data-tg-type="ooba,aphrodite,tabby" class="wide100p">
                                         <hr class="wide100p">
                                         <h4 class="wide100p textAlignCenter">
-                                            <label>
+                                            <div class="flex-container justifyCenter alignitemscenter">
                                                 <span data-i18n="Grammar String">Grammar String</span>
                                                 <div class="margin5 fa-solid fa-circle-info opacity50p " data-i18n="[title]GBNF or EBNF, depends on the backend in use. If you're using this you should know which." title="GBNF or EBNF, depends on the backend in use. If you're using this you should know which."></div>
                                                 <a href="https://github.com/ggerganov/llama.cpp/blob/master/grammars/README.md" target="_blank">
-                                                    <small>
-                                                        <div class="fa-solid fa-up-right-from-square note-link-span"></div>
-                                                    </small>
+                                                    <div class="fa-solid fa-up-right-from-square note-link-span"></div>
                                                 </a>
-                                            </label>
+                                            </div>
                                         </h4>
                                         <textarea id="grammar_string_textgenerationwebui" rows="4" class="text_pole textarea_compact monospace" data-i18n="[placeholder]Type in the desired custom grammar" placeholder="Type in the desired custom grammar"></textarea>
                                     </div>
