--- a/public/index.html
+++ b/public/index.html
@@ -5345,9 +5345,19 @@
                     </div>
                 </div>
                 <div id="bg-scrollable-content">
-                    <h3 data-i18n="System Backgrounds" class="wide100p textAlignCenter">
-                        System Backgrounds
-                    </h3>
+                    <div class="heading-container-with-controls">
+                        <h3 data-i18n="System Backgrounds" class="wide100p textAlignCenter heading-text">
+                            System Backgrounds
+                        </h3>
+                        <div class="heading-controls">
+                            <button id="bg_thumb_zoom_out" class="menu_button menu_button_icon" title="Make thumbnails smaller" data-i18n="[title]Make thumbnails smaller">
+                                <i class="fa-solid fa-minus"></i>
+                            </button>
+                            <button id="bg_thumb_zoom_in" class="menu_button menu_button_icon" title="Make thumbnails larger" data-i18n="[title]Make thumbnails larger">
+                                <i class="fa-solid fa-plus"></i>
+                            </button>
+                        </div>
+                    </div>
                     <div id="bg_menu_content" class="bg_list">
                     </div>
                     <h3 data-i18n="Chat Backgrounds" class="wide100p textAlignCenter">
