Caption: Rename Anthropic => Claude

--- a/public/scripts/extensions/caption/settings.html
+++ b/public/scripts/extensions/caption/settings.html
@@ -9,7 +9,7 @@
             <label for="caption_source" data-i18n="Source">Source</label>
             <select id="caption_source" class="text_pole">
                 <option value="local" data-i18n="Local">Local</option>
-                <option value="multimodal" data-i18n="Multimodal (OpenAI / Anthropic / llama / Google)">Multimodal (OpenAI / Anthropic / llama / Google)</option>
+                <option value="multimodal" data-i18n="Multimodal">Multimodal</option>
                 <option value="extras" data-i18n="Extras">Extras (deprecated)</option>
                 <option value="horde" data-i18n="Horde">Horde</option>
             </select>
@@ -18,7 +18,7 @@
                     <label for="caption_multimodal_api" data-i18n="API">API</label>
                     <select id="caption_multimodal_api" class="flex1 text_pole">
                         <option value="aimlapi">AI/ML API</option>
-                        <option value="anthropic">Anthropic</option>
+                        <option value="anthropic">Claude</option>
                         <option value="cohere">Cohere</option>
                         <option value="custom" data-i18n="Custom (OpenAI-compatible)">Custom (OpenAI-compatible)</option>
                         <option value="electronhub">Electron Hub</option>
