Mistral: Load caption models from endpoint

--- a/public/scripts/extensions/caption/settings.html
+++ b/public/scripts/extensions/caption/settings.html
@@ -42,21 +42,10 @@
                 <div class="flex1 flex-container flexFlowColumn flexNoGap">
                     <label for="caption_multimodal_model" data-i18n="Model">Model</label>
                     <select id="caption_multimodal_model" class="flex1 text_pole">
-                        <!-- AI/ML API, OpenRouter, Pollinations, NanoGPT are added externally by JavaScript -->
+                        <!-- AI/ML API, OpenRouter, Pollinations, NanoGPT, Mistral are added externally by JavaScript -->
                         <option data-type="cohere" value="c4ai-aya-vision-8b">c4ai-aya-vision-8b</option>
                         <option data-type="cohere" value="c4ai-aya-vision-32b">c4ai-aya-vision-32b</option>
                         <option data-type="cohere" value="command-a-vision-07-2025">command-a-vision-07-2025</option>
-                        <option data-type="mistral" value="pixtral-12b-latest">pixtral-12b-latest</option>
-                        <option data-type="mistral" value="pixtral-12b-2409">pixtral-12b-2409</option>
-                        <option data-type="mistral" value="pixtral-large-latest">pixtral-large-latest</option>
-                        <option data-type="mistral" value="pixtral-large-2411">pixtral-large-2411</option>
-                        <option data-type="mistral" value="mistral-large-pixtral-2411">mistral-large-pixtral-2411</option>
-                        <option data-type="mistral" value="mistral-small-2503">mistral-small-2503</option>
-                        <option data-type="mistral" value="mistral-small-2506">mistral-small-2506</option>
-                        <option data-type="mistral" value="mistral-small-latest">mistral-small-latest</option>
-                        <option data-type="mistral" value="mistral-medium-latest">mistral-medium-latest</option>
-                        <option data-type="mistral" value="mistral-medium-2505">mistral-medium-2505</option>
-                        <option data-type="mistral" value="mistral-medium-2508">mistral-medium-2508</option>
                         <option data-type="moonshot" value="moonshot-v1-8k-vision-preview">moonshot-v1-8k-vision-preview</option>
                         <option data-type="moonshot" value="moonshot-v1-32k-vision-preview">moonshot-v1-32k-vision-preview</option>
                         <option data-type="moonshot" value="moonshot-v1-128k-vision-preview">moonshot-v1-128k-vision-preview</option>
