Mistral: Remove hard coded model lists

--- a/public/index.html
+++ b/public/index.html
@@ -3365,67 +3365,7 @@
                             <div>
                                 <h4 data-i18n="MistralAI Model">MistralAI Model</h4>
                                 <select id="model_mistralai_select">
-                                    <optgroup label="Latest">
-                                        <option value="open-mistral-nemo">open-mistral-nemo</option>
-                                        <option value="open-mistral-7b">open-mistral-7b</option>
-                                        <option value="open-mixtral-8x7b">open-mixtral-8x7b</option>
-                                        <option value="open-mixtral-8x22b">open-mixtral-8x22b</option>
-                                        <option value="open-codestral-mamba">open-codestral-mamba</option>
-                                        <option value="ministral-3b-latest">ministral-3b-latest</option>
-                                        <option value="ministral-8b-latest">ministral-8b-latest</option>
-                                        <option value="mistral-tiny-latest">mistral-tiny-latest</option>
-                                        <option value="mistral-small-latest">mistral-small-latest</option>
-                                        <option value="mistral-medium-latest">mistral-medium-latest</option>
-                                        <option value="mistral-large-latest">mistral-large-latest</option>
-                                        <option value="mistral-saba-latest">mistral-saba-latest</option>
-                                        <option value="codestral-latest">codestral-latest</option>
-                                        <option value="codestral-mamba-latest">codestral-mamba-latest</option>
-                                        <option value="pixtral-12b-latest">pixtral-12b-latest</option>
-                                        <option value="pixtral-large-latest">pixtral-large-latest</option>
-                                        <option value="devstral-small-latest">devstral-small-latest</option>
-                                        <option value="devstral-medium-latest">devstral-medium-latest</option>
-                                        <option value="magistral-small-latest">magistral-small-latest</option>
-                                        <option value="magistral-medium-latest">magistral-medium-latest</option>
-                                    </optgroup>
-                                    <optgroup label="Sub-versions">
-                                        <option value="open-mistral-nemo-2407">open-mistral-nemo-2407</option>
-                                        <option value="open-mixtral-8x22b-2404">open-mixtral-8x22b-2404</option>
-                                        <option value="ministral-3b-2410">ministral-3b-2410</option>
-                                        <option value="ministral-8b-2410">ministral-8b-2410</option>
-                                        <option value="mistral-tiny-2312">mistral-tiny-2312</option>
-                                        <option value="mistral-tiny-2407">mistral-tiny-2407</option>
-                                        <option value="mistral-small-2312">mistral-small-2312</option>
-                                        <option value="mistral-small-2402">mistral-small-2402</option>
-                                        <option value="mistral-small-2409">mistral-small-2409</option>
-                                        <option value="mistral-small-2501">mistral-small-2501</option>
-                                        <option value="mistral-small-2503">mistral-small-2503</option>
-                                        <option value="mistral-small-2506">mistral-small-2506</option>
-                                        <option value="mistral-medium-2312">mistral-medium-2312</option>
-                                        <option value="mistral-medium-2505">mistral-medium-2505</option>
-                                        <option value="mistral-medium-2508">mistral-medium-2508</option>
-                                        <option value="mistral-large-2402">mistral-large-2402</option>
-                                        <option value="mistral-large-2407">mistral-large-2407</option>
-                                        <option value="mistral-large-2411">mistral-large-2411</option>
-                                        <option value="mistral-large-pixtral-2411">mistral-large-pixtral-2411</option>
-                                        <option value="mistral-saba-2502">mistral-saba-2502</option>
-                                        <option value="codestral-2405">codestral-2405</option>
-                                        <option value="codestral-2405-blue">codestral-2405-blue</option>
-                                        <option value="codestral-mamba-2407">codestral-mamba-2407</option>
-                                        <option value="codestral-2411-rc5">codestral-2411-rc5</option>
-                                        <option value="codestral-2412">codestral-2412</option>
-                                        <option value="codestral-2501">codestral-2501</option>
-                                        <option value="codestral-2508">codestral-2508</option>
-                                        <option value="pixtral-12b-2409">pixtral-12b-2409</option>
-                                        <option value="pixtral-large-2411">pixtral-large-2411</option>
-                                        <option value="devstral-small-2505">devstral-small-2505</option>
-                                        <option value="devstral-small-2507">devstral-small-2507</option>
-                                        <option value="devstral-medium-2507">devstral-medium-2507</option>
-                                        <option value="magistral-small-2506">magistral-small-2506</option>
-                                        <option value="magistral-medium-2506">magistral-medium-2506</option>
-                                        <option value="magistral-small-2507">magistral-small-2507</option>
-                                        <option value="magistral-medium-2507">magistral-medium-2507</option>
-                                    </optgroup>
-                                    <optgroup id="mistralai_other_models" label="Other"></optgroup>
+                                    <option data-i18n="-- Connect to the API --" value="">-- Connect to the API --</option>
                                 </select>
                             </div>
                         </form>
