--- a/public/scripts/extensions/caption/settings.html
+++ b/public/scripts/extensions/caption/settings.html
@@ -47,7 +47,7 @@
                         </div>
                     </label>
                     <select id="caption_multimodal_model" class="flex1 text_pole">
-                        <!-- AI/ML API, OpenRouter, Pollinations, NanoGPT, Mistral are added externally by JavaScript -->
+                        <!-- AI/ML API, OpenRouter, Pollinations, NanoGPT, Mistral, xAI are added externally by JavaScript -->
                         <option data-type="cohere" value="c4ai-aya-vision-8b">c4ai-aya-vision-8b</option>
                         <option data-type="cohere" value="c4ai-aya-vision-32b">c4ai-aya-vision-32b</option>
                         <option data-type="cohere" value="command-a-vision-07-2025">command-a-vision-07-2025</option>
@@ -168,9 +168,6 @@
                         <option data-type="koboldcpp" value="koboldcpp_current" data-i18n="currently_loaded">[Currently loaded]</option>
                         <option data-type="vllm" value="vllm_current" data-i18n="currently_selected">[Currently selected]</option>
                         <option data-type="custom" value="custom_current" data-i18n="currently_selected">[Currently selected]</option>
-                        <option data-type="xai" value="grok-4-0709">grok-4-0709</option>
-                        <option data-type="xai" value="grok-2-vision-1212">grok-2-vision-1212</option>
-                        <option data-type="xai" value="grok-vision-beta">grok-vision-beta</option>
                     </select>
                 </div>
                 <div data-type="ollama">
